added price to posting endpoint
